# cavity

./: README.md  main.tex  pyproject.toml
__pycache__/: cavity._accum_min_convs_numba-279.py313.1.nbc  cavity._accum_min_convs_numba-279.py313.nbi  cavity._cht_build_mono-230.py313.1.nbc  cavity._cht_build_mono-230.py313.nbi  cavity._cht_eval_mono-266.py313.1.nbc  cavity._cht_eval_mono-266.py313.nbi  cavity._transform_min_y_nb-313.py313.1.nbc  cavity._transform_min_y_nb-313.py313.nbi  cavity._transform_min_y_nb-314.py313.1.nbc  cavity._transform_min_y_nb-314.py313.nbi  cavity._update_one_nb-329.py313.1.nbc  cavity._update_one_nb-329.py313.nbi  cavity._update_one_nb-330.py313.1.nbc  cavity._update_one_nb-330.py313.nbi
cavity/: __init__.py  config.py  distributions.py  kernels.py  population.py  replica.py  simulation.py
cavity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cavity/__pycache__/: kernels._transform_min_y_nb-122.py313.1.nbc  kernels._transform_min_y_nb-122.py313.nbi  kernels._transform_min_y_nb-126.py313.1.nbc  kernels._transform_min_y_nb-126.py313.2.nbc  (+6 more)
cavity/rsb/: complexity.py  (+2 more)
figure/: data.py  plot.py
tests/: plot_1rsb_simulation.py  replica_linf_vs_mu.npz  rsb_c4_mu0.2000.npz  rsb_c4_mu0.6000.npz  rsb_c4_mu1.2000.npz  run_1rsb_simulation.py  run_cavity_hist.py  run_cavity_hist_installed.py  test_cavity.py  test_degree_distribution.py  test_replica.py  test_rsb.py  validate_1rsb_small_system.py  validation_probe_c4_mu0.6000_n24.npz  validation_smoke2_c4_mu0.6000_n16.npz  validation_smoke3_c4_mu0.6000_n16.npz  validation_smoke_c4_mu0.6000_n16.npz
(+52 files in other folders)
